remove all pwa for now

--- a/index.html
+++ b/index.html
@@ -12,22 +12,7 @@
 		<link rel="apple-touch-icon" href="/icons/apple-icon-180.png" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="manifest" href="/manifest.json" />
-		<title>Pokedex</title>
 		<script defer type="module" src="/src/main.ts"></script>
 	</head>
-	<body>
-		<script>
-			// Check that service workers are supported
-			if ('serviceWorker' in navigator) {
-				// Use the window load event to keep the page load performant
-				window.addEventListener('load', () => {
-					navigator.serviceWorker
-						.register('./sw.js')
-						.then((registration) =>
-							console.log('service worker registered', registration)
-						);
-				});
-			}
-		</script>
-	</body>
+	<body></body>
 </html>
